--- a/ag.css
+++ b/ag.css
@@ -1,16 +1,12 @@
-.division__1 {
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+.main-div {
     display: flex;
     margin-top: 40%;
     display: none;
 }
-
-.division__2 {
-    width: 100%;
-    height: 100%;
-    background-color: burlywood;
-}
-
-
 
 #checkout__btn,
 #checkin__btn {
@@ -33,27 +29,116 @@
     border-radius: 15px;
 }
 
+/* main divs css ends here */
+
+.head{
+    color: #2b2d54;
+    border-bottom:3px solid #f5f5f7;
+    padding-left: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0;
+}
+.searcher{
+    border: 1px solid darkblue;
+    margin-top:5px;
+    border-radius: 20px;
+    font-size: 12px;
+    width: 80%;
+    padding: 7px;
+    padding-left:20px ;
+    padding-left: 35px; /* space for icon */
+    background: url('https://cdn-icons-png.flaticon.com/512/622/622669.png') no-repeat 10px center;
+    background-size: 16px 16px;
+    background-color: white;
+
+}
+.search-area__btn{
+    background-color:#2b2d54;
+    width: 36%;
+    color: white;
+    padding:12px;
+    border: none;
+    border-radius: 6px;
+    margin: 5px;
+    margin-top: 10px;
+    font-weight: bold;
+
+}
+.btn1{
+    background-color: #bdbdde;
+    color:#2b2d54 ;
+}
+.btn1:hover{
+    background-color: #2b2d54;
+    color:white ;
+}
+
+.btn2:hover{
+    background-color: #bdbdde;
+    color:#2b2d54 ;
+}
+
+
+.seacrch_btn-area{
+    display: block;
+    padding-left: 17%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+
+}
+
+/* search area ends here */
+
+.checkin__div {
+    width: 100%;
+    height: 100%;
+    background-color:#e3e4fc;
+}
+
 .checkout__form {
-    background-color: azure;
-    padding: 10px;
-    margin-top: 15px;
+    background-color:beige;
+    padding: 15px;
 }
 .check-heads{
-    font-size: small;
+    font-size:14px;
+    color:#2b2d54;
+    font-weight: 500;
 }
 
 .check-row{
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .search-area{
     padding: 10px;
 }
 
 .input-txt{
-    border: 1px solid grey;
-    border-radius: 5px;
+    border: 1px solid cornflowerblue;
+    margin-top:5px;
+    border-radius: 8px;
+    width: 87%;
     padding: 5px;
 }
+#btn-submit{
+    background-color:#2b2d54;
+    width: 80%;
+    color: white;
+    padding:12px;
+    border: none;
+    border-radius: 6px;
+    margin: 10px;
+    margin-top: 20px;
+}
+
+.my-table {
+    border-collapse: separate; 
+    border-spacing: 0 15px;  
+  }
+
+  /* checkin divs css ends here */
+
 
 @media screen and (min-width:600px) {
 
