--- a/ag.css
+++ b/ag.css
@@ -4,8 +4,7 @@
 }
 .main-div {
     display: flex;
-    margin-top: 10%;
- 
+    margin-top: 70%;
 }
 
 #checkout__btn,
@@ -14,19 +13,23 @@
     margin: 25%;
     padding: 10px;
     width: 50%;
-    background-color: chartreuse;
+    background-color: #2b2d54;
     color: white;
     border: none;
     border-radius: 10px;
 }
 .checkout__box{
-    margin-right:5%;
+    margin-right:2%;
+    margin-left:2%;
+}
+.checkin__box {
+    margin-right:2%;
 }
 
 
 .checkout__box,
 .checkin__box {
-    background-color: #d1ffd3;
+    background-color:  #ededfc;
     width: 50%;
     height: 20%;
     border-radius: 15px;
@@ -218,6 +221,12 @@ margin-top: 15px;
 
 
  /* media query media query media query media query media query media query media query media query media query media query */
+ @media screen and (min-width:400px) {
+    .main-div{
+        margin-top: 10%;
+    }
+    
+ }
 @media screen and (min-width:600px) {
     .head{
         padding-left: 25%;
@@ -268,6 +277,10 @@ margin-top: 15px;
         height: 80%;
         display: none;
     }
+
+    .main-div{
+        margin-top: 20%;
+    }
 }
 
 /* media query for 600px+ ends here */
@@ -317,7 +330,9 @@ margin-top: 15px;
         height: 80%;
         display: none;
     }
-    
+    .main-div{
+        margin-top: 10%;
+    }
  
   
 }
