--- a/ag.css
+++ b/ag.css
@@ -76,7 +76,7 @@
 
 }
 .btn1{
-    background-color: #bdbdde;
+    background-color:#dee2fc;
     color:#2b2d54 ;
 }
 .btn1:hover{
@@ -85,7 +85,7 @@
 }
 
 .btn2:hover{
-    background-color: #bdbdde;
+    background-color: #dee2fc;
     color:#2b2d54 ;
 }
 
