--- a/ag.css
+++ b/ag.css
@@ -1,6 +1,7 @@
 *{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
+ 
 }
 .main-div {
     display: flex;
@@ -40,14 +41,15 @@
 .head{
     color: #2b2d54;
     border-bottom:3px solid #f5f5f7;
-    padding-left: 17%;
+    font-size: 20px;
+    padding-left: 23%;
     padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     margin: 0;
 }
 .searcher{
     border: 1px solid cornflowerblue;
-    margin-top:5px;
+    margin-top:3px;
     border-radius: 20px;
     font-size: 12px;
     width: 80%;
@@ -67,11 +69,11 @@
     background-color:#2b2d54;
     width: 36%;
     color: white;
-    padding:12px;
+    padding:10px;
     border: none;
     border-radius: 6px;
     margin: 5px;
-    margin-top: 10px;
+    margin-top: 6px;
     font-weight: bold;
 
 }
@@ -121,7 +123,7 @@
 }
 
 .check-row{
-margin-top: 15px;
+    margin-top: -2px;
 }
 .search-area{
     padding: 10px;
@@ -146,11 +148,12 @@ margin-top: 15px;
     background-color:#2b2d54;
     width: 80%;
     color: white;
-    padding:12px;
+    padding:7px;
     border: none;
     border-radius: 6px;
     margin: 10px;
     margin-top: 20px;
+    margin-bottom: -3px;
 }
 #btn-submit:hover{
     background-color:#484a66;
@@ -230,6 +233,8 @@ margin-top: 15px;
 @media screen and (min-width:600px) {
     .head{
         padding-left: 25%;
+        font-size: 25px;
+
     }
     .searcher{
         margin-left: 5%;
@@ -267,7 +272,7 @@ margin-top: 15px;
     }
 
     .check-row{
-        margin-top: 8px;
+        margin-top: 7px;
     }
     /* checkin div ends here */
    
@@ -287,14 +292,15 @@ margin-top: 15px;
 
 @media screen and (min-width:1000px) {
     .head{
-        padding-left: 28%;
+        padding-left: 32%;
+        font-size: 20px;
     }
     .searcher{
         margin-left: 5%;
     }
     .checkin__div {
         margin: auto;
-        width: 42%;
+        width: 52%;
         height: 100%;
     }
 
@@ -309,18 +315,20 @@ margin-top: 15px;
     }
     .check-row{
         margin-left: 5%;
-        margin-top: 8px;
+        margin-top: -5px;
+         
+
 
     }
 
     #btn-submit{
         width:50%;
         margin-left: 25%;
-        margin-top:35px;
+        margin-top:15px;
     }
     .checkout__form{
         margin-top: 15px;
-        height:510px;
+        height:400px;
 
     }
     .checkout__div {
@@ -352,7 +360,7 @@ margin-top: 15px;
     }
 
     .check-row{
-        margin-top: 8px;
+        margin-top: 7px;
     }
     .main-div{
         margin-left: -10px;
