--- a/ag.css
+++ b/ag.css
@@ -258,7 +258,9 @@
     .check-row{
         margin-left: 5%;
     }
-
+.check-heads{
+    font-size: 16px;
+}
     #btn-submit{
         margin-top:35px;
     }
@@ -350,9 +352,12 @@
 /* media query for 600px+ ends here */
 
 @media screen and (min-width:1500px) {
+    .head{
+        font-size: 25px;
+    }
     .checkin__div {
-        margin: auto;
-        width: 45%;
+        width: 53%;
+        margin-top:70px;
         height: 100%;
     }
     .checkout__form{
