--- a/ag.css
+++ b/ag.css
@@ -357,20 +357,24 @@
     }
     .checkin__div {
         width: 53%;
-        margin-top:70px;
+        margin-top:20px;
         height: 100%;
     }
     .checkout__form{
         margin-top: 15px;
-        height:330px;
+        height:430px;
 
     }
-
+.input-txt{
+    height: 25px;
+}
     .check-row{
         margin-top: 7px;
+        padding: 20px;
     }
     .check-heads{
         font-size: 16px;
+        padding: 15px;
     }
     .main-div{
         margin-left: -10px;
