--- a/ag.css
+++ b/ag.css
@@ -42,7 +42,7 @@
     color: #2b2d54;
     border-bottom:3px solid #f5f5f7;
     font-size: 20px;
-    padding-left: 12%;
+    padding-left: 25%;
     padding-top: 10px;
     padding-bottom: 5px;
     margin: 0;
@@ -252,6 +252,7 @@
 
     }
 
+    
     .division__1 {
         margin: 20%;
     }
@@ -260,6 +261,7 @@
     }
 .check-heads{
     font-size: 16px;
+    padding: 20px;
 }
     #btn-submit{
         margin-top:35px;
