--- a/ag.css
+++ b/ag.css
@@ -107,7 +107,7 @@
     margin: 5%;
     width: 90%;
     height: 80%;
-    background-color:#c7c7ff;
+    background-color:#b5d1ff;
     display: none;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
 }
