--- a/ag.css
+++ b/ag.css
@@ -107,7 +107,7 @@
     margin: 5%;
     width: 90%;
     height: 80%;
-    background-color:#d7e5fa;
+    background-color:#e6f0ff;
     display: none;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
 }
@@ -131,9 +131,8 @@
 
 .input-txt{
     /* border: 1px solid cornflowerblue; */
-    background-color: wh;
-    border: #d7e5fa;
-    margin-top:5px;
+    background-color: white;
+    border:1px cornflowerblue solid;    margin-top:5px;
     border-radius: 7px;
     width: 87%;
     padding: 5px;
@@ -207,7 +206,7 @@
 }
 .input-txt1{
     /* border: 1px solid cornflowerblue; */
-    border: none;
+    border:1px cornflowerblue solid;
     margin-top:5px;
     border-radius: 20px;
     width: 87%;
@@ -234,7 +233,7 @@
     .head{
         padding-left: 30%;
         font-size: 25px;
-        color: purple;
+        color:#2b2d54;
 
 
     }
@@ -253,7 +252,10 @@
         padding: 15px;
 
     }
+    .input-txt{
 
+    height:29px;
+    }
     
     .division__1 {
         margin: 20%;
@@ -291,13 +293,14 @@
     }
 
     .main-div{
-        margin-top: 20%;
+        margin-top: 43%;
     }
 }
 
 /* media query for 600px+ ends here */
 
 @media screen and (min-width:1000px) {
+
     .head{
         padding-left: 38%;
         font-size: 20px;
@@ -308,9 +311,11 @@
         margin-left: 5%;
     }
     .checkin__div {
-        margin-top:5px;
+        margin-top:-5px;
+        margin-left: 10%;
         width: 80%;
-        height: 100%;
+        height:80%;
+        margin-bottom: -10px;
     }
 
     #checkout__btn,
@@ -327,14 +332,10 @@
         margin-top: -5px;
         padding: 9px;
 
-
-
     }
     .check-heads{
         font-size: 16px;
     padding: 22px;
-
-
     }
 
     #btn-submit{
@@ -354,7 +355,7 @@
         display: none;
     }
     .main-div{
-        margin-top: 10%;
+        margin-top: 20%;
     }
     .input-txt{
         height: 25px;
