--- a/ag.css
+++ b/ag.css
@@ -40,7 +40,7 @@
 
 .head{
     color: #2b2d54;
-    border-bottom:3px solid #f5f5f7;
+    border-bottom:3px solid white;
     font-size: 20px;
     padding-left: 25%;
     padding-top: 10px;
@@ -107,13 +107,13 @@
     margin: 5%;
     width: 90%;
     height: 80%;
-    background-color:#e6f0ff;
+    background-color:#f2f6fc;
     display: none;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); 
 }
 
 .checkout__form {
-    background-color:#f5f9ff;
+    background-color:white;
     padding: 15px;
 }
 .check-heads{
@@ -132,9 +132,9 @@
 .input-txt{
     /* border: 1px solid cornflowerblue; */
     background-color: white;
-    border:1px cornflowerblue solid; 
+    border:1px #bbd5fa solid; 
        margin-top:5px;
-    border-radius: 4px;
+    border-radius: 5px;
     width: 87%;
     padding: 5px;
     padding-left: 20px;
@@ -232,7 +232,7 @@
  }
 @media screen and (min-width:600px) {
     .head{
-        padding-left: 30%;
+        padding-left: 33%;
         font-size: 25px;
         color:#2b2d54;
 
@@ -250,7 +250,7 @@
 
     #checkout__btn,
     #checkin__btn {
-        padding: 15px;
+        padding: 17px;
 
     }
     .input-txt{
@@ -278,7 +278,8 @@
 
     }
     .seacrch_btn-area{
-        margin-bottom :-10px;;
+        margin-top :27px;
+        margin-bottom: -25px;
     }
 
     .check-row{
@@ -324,7 +325,10 @@
         padding: 15px;
 
     }
-
+    .seacrch_btn-area{
+        margin-top :13px;
+        margin-bottom:-13px;
+    }
     .division__1 {
         margin: 20%;
     }
