--- a/ag.css
+++ b/ag.css
@@ -132,7 +132,7 @@
 .input-txt{
     /* border: 1px solid cornflowerblue; */
     background-color: white;
-    border:1px #bbd5fa solid; 
+    border:1px #d4e4fa solid; 
        margin-top:5px;
     border-radius: 5px;
     width: 87%;
@@ -171,7 +171,7 @@
     margin:5%;
     width: 90%;
     height: 80%;
-    background-color:#c7c7ff;
+    background-color:#f2f6fc;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
     display: none;
 }
@@ -179,13 +179,13 @@
 .head1{
     color: #2b2d54;
     border-bottom:3px solid #f5f5f7;
-    padding-left: 12%;
+    padding-left: 4%;
     padding-top: 10px;
     padding-bottom: 10px;
     margin: 0;
 }
 .checkin__form {
-    background-color:#ededfc;
+    background-color:white;
     padding: 15px;
 }
 .checkin-row{
@@ -207,9 +207,10 @@
 }
 .input-txt1{
     /* border: 1px solid cornflowerblue; */
-    border:1px cornflowerblue solid;
+    border:1px #d4e4fa solid;
     margin-top:5px;
-    border-radius: 20px;
+    margin-left:20px;
+    border-radius: 5px;
     width: 87%;
     height: 22px;
     padding: 5px;
@@ -219,6 +220,9 @@
 .input-txt1:focus {
     outline-color:cornflowerblue;
     outline-width: 2px; 
+  }
+  .checkout__btn{
+    margin-left: 10%;
   }
 /* checkin div ends here */
 
@@ -235,9 +239,10 @@
         padding-left: 33%;
         font-size: 25px;
         color:#2b2d54;
-
-
     }
+    .head1{
+      
+        padding-left: 6%;}
     .searcher{
         margin-left: 5%;
     }
@@ -309,6 +314,9 @@
         color:#2b2d54;
 
     }
+    .head1{
+      
+        padding-left: 6%;}
     .searcher{
         margin-left: 5%;
     }
