--- a/ag.css
+++ b/ag.css
@@ -48,22 +48,21 @@
     margin: 0;
 }
 .searcher{
-    border: 1px solid cornflowerblue;
+    border: 1px solid #d4e4fa;
     margin-top:3px;
     border-radius: 20px;
-    font-size: 12px;
+    font-size: 14px;
     width: 80%;
-    padding: 7px;
-    padding-left:20px ;
-    padding-left: 35px; /* space for icon */
+    padding: 8px;
+    padding-left: 40px; 
     background: url('https://cdn-icons-png.flaticon.com/512/622/622669.png') no-repeat 10px center;
     background-size: 16px 16px;
     background-color: white;
 
 }
 .searcher:focus {
-    outline-color:darkblue; /* Change this to any color you want */
-    outline-width: 2px; /* Optional: Adjust the thickness of the outline */
+    outline-color:cornflowerblue;
+    outline-width: 2px; 
   }
 .search-area__btn{
     background-color:#2b2d54;
@@ -245,6 +244,8 @@
         padding-left: 6%;}
     .searcher{
         margin-left: 5%;
+        padding: 10px;
+        padding-left: 40px;
     }
     .checkin__div {
         margin-top: 80px;
@@ -261,10 +262,6 @@
     .input-txt{
 
     height:29px;
-    }
-    
-    .division__1 {
-        margin: 20%;
     }
     .check-row{
         margin-left: 5%;
@@ -283,8 +280,8 @@
 
     }
     .seacrch_btn-area{
-        margin-top :27px;
-        margin-bottom: -25px;
+        margin-top :17px;
+        margin-bottom: -35px;
     }
 
     .check-row{
@@ -318,7 +315,7 @@
       
         padding-left: 6%;}
     .searcher{
-        margin-left: 5%;
+        margin-left: 6%;
     }
     .checkin__div {
         margin-top:-5px;
